# mrzavec

./: .gitignore  BUG_FIXES.md  Cargo.toml  FEATURE_PARITY.md  GLOSSARY.md  INTERSLAVIC_TRANSLATION_GUIDANCE.md  PORTING_NOTES.md  README.md  RUNTIME_INFLECTION_PROMPT.md  STYLE_PASS_2_PROMPT.md  STYLE_PASS_3_PROMPT.md  TRANSLATION_PROMPT.md  WEBPAGE_PROMPT.md  WEB_PERFORMANCE_PROMPT.md  game-lexicon.tsv  package-lock.json  package.json  playwright.config.mjs
.github/workflows/: ci.yml  pages.yml
examples/: page_forms.rs  prep_cases.rs
scripts/: bless.py  build-wasm.sh  check_lang.sh  extract_page_text.py  government-notes.txt  inflection-allow.txt  lint_government.py  lint_inflection.py  lint_spelling.py
src/: combat.rs  command.rs  effects.rs  game.rs  generation.rs  help.rs  item.rs  lang.rs  lib.rs  main.rs  map.rs  monster.rs  platform.rs  player.rs  rng.rs  save.rs  score.rs
web/: index.html  mrzavec.spec.mjs  page-lexicon.tsv
