[package]
name = "mrzavec"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["ui"] }
interslavic = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
strip = "debuginfo"
