[package]
name = "mrzavec"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
# Granular features instead of the "ui" umbrella: that pulls default_app +
# default_platform (animation, gilrs, gizmos, picking, scene, png, sysinfo,
# clipboard, ...) which this text-grid game never touches.
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_log",
    "bevy_asset",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "webgl2",
    "x11",
    "wayland",
] }
interslavic = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
